tests/baselines/reference/propertyOrdering2(strict=true).errors.txt
propertyOrdering2.ts(2,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
propertyOrdering2.ts(2,27): error TS7006: Parameter 'y' implicitly has an 'any' type.
propertyOrdering2.ts(5,21): error TS2339: Property 'y' does not exist on type 'Foo'.


==== propertyOrdering2.ts (3 errors) ====
    class Foo {
        constructor(public x, y) { }
                    ~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                              ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
           foo() {
            var a = this.x;
            return this.y;
                        ~
!!! error TS2339: Property 'y' does not exist on type 'Foo'.
        }
    }
    